[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
itertools = "0.14.0"
libc = "0.2.178"
once_cell = "1.21.3"
ordered-float = "5.1.0"
rand = "0.9.2"
regex = "1.12.2"
serde_json = "1.0.145"
tokio = { version = "1.34", features = ["full", "test-util"] }
